# music-control-device

./: CMakeLists.txt  README.md  TODO.md  main.c
components/display/: display.c  display.h
components/pause_play/: pause_play.c  pause_play.h
components/volume/: volume.c  volume.h
